--- a/src/styles/components/_colours.scss
+++ b/src/styles/components/_colours.scss
@@ -1,4 +1,5 @@
 // Colour pallet found: https://coolors.co/palette/0d1b2a-1b263b-415a77-778da9-e0e1dd
 $primary-darkest: #0D1B2A;
 $primary-lightest: #778DA9;
-$off-white: #E0E1DD
+$off-white: #E0E1DD;
+$highlight: #415A77;
