--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,10 +1,11 @@
 .header {
     background-color: $primary-darkest;
     width: 100vw;
-    height: 84px;
-    padding: .5rem 1.5rem;
+    height: 96px;
 
     img { //animates the logo on page load
-        animation: zoom 1s
+        animation: zoom 1s;
+        margin-left: 1rem;
+        padding-top: .75rem;
     }
 }
