--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -36,6 +36,7 @@
             align-items: center;
             color: $off-white;
             text-decoration: none;
+            font-weight: 700;
         }
         img {
             margin-right: 1rem;
