--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -184,6 +184,7 @@ body {
   align-items: center;
   color: #E0E1DD;
   text-decoration: none;
+  font-weight: 700;
 }
 .footer .contact-foot img {
   margin-right: 1rem;
