--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -112,7 +112,8 @@ body {
   background-color: #E0E1DD;
 }
 .jumbotron .container {
-  padding-bottom: 1px;
+  padding-bottom: 1rem;
+  width: 80vw;
 }
 .jumbotron h1 {
   color: #0D1B2A;
@@ -128,23 +129,43 @@ body {
   animation: spin 1s infinite;
 }
 .jumbotron .main-text {
-  width: 80vw;
-  margin: 0 auto 2rem;
   border: 1px solid #415A77;
   border-radius: 15%;
-  padding: 1rem;
   background-color: #415A77;
   color: #E0E1DD;
   box-shadow: 0 0 2rem #778DA9;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .jumbotron .main-text h2 {
-  padding-bottom: 1.5rem;
   text-decoration: underline;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
 }
 .jumbotron .main-text p {
-  padding-bottom: 0.75rem;
   font-weight: 400;
   font-size: 16px;
+  padding: 0 1rem 1rem 1rem;
+}
+
+input[type=text], input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #0D1B2A;
+  border-radius: 15px;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #0D1B2A;
+  color: #E0E1DD;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
 }
 
 .footer {
