--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -13,7 +13,10 @@ input[type=text] , input[type=email], select, textarea {
     border: 1px solid $primary-darkest;
     border-radius: 15px;
     margin-bottom: 1rem;
+}
 
+textarea {
+    height: 150px;
 }
 
 input[type=submit] {
