--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,8 @@
 // Style Main
 @import 'components/jumbotron';
 @import 'components/form';
+@import 'components/blog';
+
 
 //Style Footer
 @import 'components/footer';
