Adjusted index image to be circular not oval

--- a/src/styles/components/_images.scss
+++ b/src/styles/components/_images.scss
@@ -2,13 +2,14 @@
     width: 64px;
 }
 
-.main-image img{
-    width: 80vw;
-    border-radius: 50%;
-    border: 1px solid $primary-darkest;
-    // box-shadow: 0px 0px 20px $primary-darkest; I had this shadow originally placed, however though it was overkill with a shadow for this div and the below text div
-    margin: 10px 0px;
-}
+// .main-image img{
+//     width: 80vw;
+//     height: 80vw;
+//     border-radius: 50%;
+//     border: 1px solid $primary-darkest;
+//     // box-shadow: 0px 0px 20px $primary-darkest; I had this shadow originally placed, however though it was overkill with a shadow for this div and the below text div
+//     margin: 10px 0px;
+// }
 
 .footer img {
     width: 48px;
