--- a/src/styles/components/_animation.scss
+++ b/src/styles/components/_animation.scss
@@ -13,3 +13,12 @@
         transform: rotate(360deg)
     }
 }
+
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: .25;
+    }
+}
