Finished Blog (mobile) starting about

--- a/src/styles/components/_animation.scss
+++ b/src/styles/components/_animation.scss
@@ -14,7 +14,7 @@
     }
 }
 
-@keyframes fade {
+@keyframes fade { //Adds a fade effecvt to make an item almost transparent
     0% {
         opacity: 1;
     }
