--- a/src/styles/components/_images.scss
+++ b/src/styles/components/_images.scss
@@ -1,28 +1,55 @@
+//sets image width for the logo
 .header img {
     width: 64px;
 }
 
-// .main-image img{
-//     width: 80vw;
-//     height: 80vw;
-//     border-radius: 50%;
-//     border: 1px solid $primary-darkest;
-//     // box-shadow: 0px 0px 20px $primary-darkest; I had this shadow originally placed, however though it was overkill with a shadow for this div and the below text div
-//     margin: 10px 0px;
-// }
-
+//sets image width for the GitHub and LinkedIn icons
 .footer img {
     width: 48px;
     }
 
+//image of an arrow "send" in the contact button in all footers
 .contact-foot img {
     width: 30px;
     filter: brightness(100%) invert(100%) //Researched how I could make an image white as the black default did not work with the background colour.
 }
-
+//sets the image for the map in contact us page
 .other-contact img {
     width: 80vw;
     border: 1px solid $primary-darkest;
     border-radius: 15px;
     box-shadow: 0px 0px 20px $primary-darkest;
+}
+//sets each blog card image, also sets a separate opaque image transition for 2s on hover
+.blog-card1 {
+    background-image: url("../assets/puppy.jpg"); 
+    transition: background-image 2s;
+    &:hover,
+    &:active {
+        background-image: url("../assets/puppy2.png"); 
+    }
+}
+.blog-card2 {
+    background-image: url("../assets/puppy.jpg"); 
+    transition: background-image 2s;
+    &:hover,
+    &:active {
+        background-image: url("../assets/puppy2.png"); 
+    }
+}
+.blog-card3 {
+    background-image: url("../assets/puppy.jpg"); 
+    transition: background-image 2s;
+    &:hover,
+    &:active {
+        background-image: url("../assets/puppy2.png"); 
+    }
+}
+.blog-card4 {
+    background-image: url("../assets/puppy.jpg"); 
+    transition: background-image 2s;
+    &:hover,
+    &:active {
+        background-image: url("../assets/puppy2.png"); 
+    }
 }
