--- a/src/styles/components/_images.scss
+++ b/src/styles/components/_images.scss
@@ -21,6 +21,7 @@
     box-shadow: 0px 0px 20px $primary-darkest;
 }
 //sets each blog card image, also sets a separate opaque image transition for 2s on hover
+//site used to change transparency onlinepngtools.com
 .blog-card1 {
     background-image: url("../assets/puppy.jpg"); 
     transition: background-image 2s;
@@ -52,4 +53,8 @@
     &:active {
         background-image: url("../assets/puppy2.png"); 
     }
+}
+.blog-text img {
+    width: 80vw;
+    padding: 24px 0;
 }
