--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,7 @@
 @import 'components/jumbotron';
 @import 'components/form';
 @import 'components/blog';
+@import 'components/about';
 
 
 //Style Footer
