--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -14,6 +14,11 @@
         padding: .25rem 1rem;
         margin: .5rem 0;
         background-color: $highlight;
+        box-shadow: //researched how I could make a 3D effect with clean lines found on w3school.com (Box Shadow - Multiple Shadows)
+            0 0 0 1px $primary-darkest,
+            0 1px 2px $primary-darkest,
+            0 2px 4px $primary-darkest,
+            0 4px 8px $primary-darkest;
         p{ 
             color: $off-white;
         }
@@ -31,6 +36,9 @@
             &:last-child {
                 margin-bottom: .5rem;
             }
+        }
+        h4 {
+            margin-top: 1rem;
         }
         .resume {
             border: 1px solid $highlight;
@@ -56,6 +64,37 @@
         li{
             &:last-child {
                 margin-bottom: .5rem;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .jumbotron {
+        .container{
+            .work {
+                display: flex;
+                flex-direction: column;
+                flex: 1.5;
+                width: 45vw;
+                padding: 0 1rem 0 1rem;
+                .work-dot {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+            .personal {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                flex: 1.5;
+                width: 45vw;
+                padding: 0 1rem 0 1rem;
+                border-right: 1px solid $primary-darkest;
+                img {
+                    width: 35vw;
+                    margin: 1rem 0;
+                }
             }
         }
     }
