--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -65,3 +65,12 @@
         border-top: none;
     }
 }
+@media screen and (min-width: 1024px){
+    .jumbotron {
+        .container{
+          .blog-card{
+            width: 20vw;
+          }  
+        }
+    }
+}
