--- a/src/styles/components/_default.scss
+++ b/src/styles/components/_default.scss
@@ -4,7 +4,9 @@
     border: 0px;
     box-sizing: border-box;
 }
-
+html, body {
+    height: 100%;
+}
 .container{
     width: 100vw;
     margin: 0 auto;
